--- a/android/app/src/main/res/layout/flutter_game.xml
+++ b/android/app/src/main/res/layout/flutter_game.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
-    tools:context=".NativeActivity"
-    >
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".NativeActivity">
 
-      <FrameLayout android:id="@+id/flutter_game_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3 + 5 ="
+        android:textSize="25dp" />
 
-</RelativeLayout>
+    <EditText
+        android:id="@+id/game_result"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/game_validate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Valider" />
+
+</LinearLayout>
