--- a/android/app/src/main/res/layout/flutter_game.xml
+++ b/android/app/src/main/res/layout/flutter_game.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
@@ -10,16 +8,23 @@
     android:orientation="vertical"
     tools:context=".NativeActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3 + 5 ="
-        android:textSize="25dp" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/game_result"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/game_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test ="
+            android:textSize="25dp" />
+
+        <EditText
+            android:id="@+id/game_result"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/game_validate"
